modules/gdscript/tests/scripts/analyzer/errors/static_func_access_non_static.gd
# GH-91403

static func static_func():
	print(non_static_func)

func non_static_func():
	pass

func test():
	pass
